Updates from Overleaf

--- a/example.bib
+++ b/example.bib
@@ -87,13 +87,13 @@
 % circuits. Available from DOI: 1721.1/11173. Master’s thesis.  Massachusetts
 % Institute of Technology.
 
-@MASTERSTHESIS{shannon40,
-  author      = {Shannon, Claude Elwood},
-  title       = {A symbolic analysis of relay and switching circuits},
-  date        = {1940},
-  institution = {Massachusetts Institute of Technology},
+@MASTERSTHESIS{mrazekMasterThesis,
+  author      = {Mrázek, Jan},
+  title       = {RoFI – Distributed Metamorphic Robots},
+  date        = {2019},
+  institution = {Fakulta informatiky Masarykovej univerzity},
   langid      = {english},
-  doi         = {1721.1/11173},
+  %doi         = {1721.1/11173},
 }
 
 % EHLINGER JR., Philip Charles. Device for the treatment of hiccups. US.
@@ -112,12 +112,22 @@
 % Masaryk University, 1996–2009 [online]. Brno: Masaryk University
 % [visited on 2016-12-09]. Available from: https://www.muni.cz/en.
 
-@ONLINE{muni,
-  publisher = {Masaryk University},
-  title     = {Masaryk University},
-  date      = {1996/2009},
-  url       = {https://www.muni.cz/en},
-  urldate   = {2016-12-09},
+@ONLINE{rofiCom,
+  %publisher = {Masaryk University},
+  title     = {RoFICom Connector},
+  date      = {2019},
+  url       = {http://ro.fi.muni.cz/connector/},
+  urldate   = {2019-04-13},
+  location  = {Brno},
+  langid    = {english}
+}
+
+@ONLINE{rofiWeb,
+  %publisher = {Masaryk University},
+  title     = {RoFI Platform},
+  date      = {2019},
+  url       = {http://ro.fi.muni.cz/},
+  urldate   = {2019-04-13},
   location  = {Brno},
   langid    = {english}
 }
