--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -116,7 +116,7 @@ Modul platformy RoFI bol navrhnutý tak, aby bol tzv. \textit{lattice type}\foot
     \label{fig:module}
 \end{figure}
 
-Každý z modulov sa skladá z dvoch častí (\textit{side A} a \textit{side B}). Každá z nich sa delí na dve časti označené ako \textit{body} a \textit{shoe} (viď. obrázok \ref{fig:module_parts}). 
+Každý z modulov sa skladá z dvoch častí (\textit{side A} a \textit{side B}). Každá z nich sa delí na dve časti označené ako \textit{body} a \textit{shoe} (viď obrázok \ref{fig:module_parts}). 
 
 \begin{figure}[htbp]
     \centering
@@ -136,7 +136,7 @@ Moduly majú schopnosť sa pohybovať, a to vďaka až trom stupňom voľnosti. 
 
 Ako bolo spomenuté vyššie, tak každý modul má schopnosť pripojiť sa k iným modulom (a vytvoriť tak RoFIbotov) alebo k pasívnym prvkom pomocou dockov. Dockovací systém platformy RoFI je navrhnutý ako tzv. \textit{genderless}, čo umožňuje vzájomné spojenie ľubovoľných dvoch dockov. 
 
-Každý modul obsahuje práve šesť dockov, ktoré sú rozmiestnené po tri na každej \textit{shoe} modulu. Dock je okrem svojej polohy na module definovaný aj orientačným vektorom (viď. obrázok \ref{fig:dock_desc}). Prepojenie je definované vzájomnou polohou orientačných vektorov dockov spojenia. 
+Každý modul obsahuje práve šesť dockov, ktoré sú rozmiestnené po tri na každej \textit{shoe} modulu. Dock je okrem svojej polohy na module definovaný aj orientačným vektorom (viď obrázok \ref{fig:dock_desc}). Prepojenie je definované vzájomnou polohou orientačných vektorov dockov spojenia. 
 
 \begin{figure}[htbp]
     \centering
@@ -145,7 +145,7 @@ Každý modul obsahuje práve šesť dockov, ktoré sú rozmiestnené po tri na 
     \label{fig:dock_desc}
 \end{figure}
 
-Konštrukcia dockov dovoľuje ich prepojenie až v štyroch rôznych polohách. Vzájomná poloha orientačných vektorov dockov môže byť postupne $0\degree$, $90\degree$, $180\degree$ alebo $270\degree$ a tieto prepojenia sa označujú v tomto poradí ako \textit{north - N}, \textit{east - E}, \textit{south - S} a \textit{west - W} (viď. obrázok \ref{fig:dock_orientation}). 
+Konštrukcia dockov dovoľuje ich prepojenie až v štyroch rôznych polohách. Vzájomná poloha orientačných vektorov dockov môže byť postupne $0\degree$, $90\degree$, $180\degree$ alebo $270\degree$ a tieto prepojenia sa označujú v tomto poradí ako \textit{north -- N}, \textit{east -- E}, \textit{south -- S} a \textit{west -- W} (viď obrázok \ref{fig:dock_orientation}). 
 
 \begin{figure}[htbp]
     \centering
