--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -154,24 +154,34 @@ Konštrukcia dockov dovoľuje ich prepojenie až v štyroch rôznych polohách. 
     \label{fig:dock_orientation}
 \end{figure}
 
-
-
-
-
-\section{Obmedzenia pre môj problém}
+\section{Formulácia problému}
 \label{sec:restrictions}
 
-\chapter{Vlastná práca}
-\section{Formálna špecifikácia problému, vstupných a výstupných údajov - kompatibilita s vizualizérom}
-\section{Popis ako funguje simulácia a využité knižnice}
-\section{Popis navrhnutých a implementovaných algoritmov na rekonfiguráciu}
-\subsection{Centralizovane-distribuovaný algoritmus}
+\chapter{Distribuované algoritmy}
+%vlastna praca
+\section{Formálna špecifikácia problému}
+vstupné a výstupné údaje + kompatibilita s vizualizérom
+\section{-------}
+
+\chapter{Implementácia}
+\section{Technická špecifikácia a využité knižnice}
+\section{Popis algoritmov na rekonfiguráciu}
+\subsection{Centralizovane-distribuovaný algoritmus - //TODO premenovat}
 \subsection{Distribuovaný algoritmus}
 
-\chapter{Zhodnotenie a záver}
-\section{Porovnanie algoritmov z pohľadu časovej a priestorovej zložitosti}
-\section{Ukážkové konfigurácie a porovnanie rýchlostí ich výpočtov a prípadne rôznorodosti nájdených riešení}
-\section{Popis, ktorý algoritmus a na aké konfigurácie a zmeny v rekonfiguráciách je viac vhodný}
+\chapter{Experimentálne zhodnotenie}
+\section{Ukážkové rekonfigurácie}
+Ukážkové konfigurácie a porovnanie rýchlostí ich výpočtov a prípadne rôznorodosti nájdených riešení
+
+Odkazy na videá, obrázky, presné časy behov a rôznosť riešení. 
+\section{Evaluácia výsledkov na vzorových príkladoch}
+Porovnanie algoritmov z pohľadu časovej a priestorovej zložitosti
+
+Popis, ktorý algoritmus a na aké konfigurácie a zmeny v rekonfiguráciách je viac vhodný
+
+\chapter{Záver}
+Rekapitulácia. 
+Ako ďalej zlepšovať algoritmy a čo ešte pridávať a podobne. 
 
   \printbibliography[heading=bibintoc] %% Print the bibliography.
 
